--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "build": "tsc --build packages.tsconfig.json"
+    "build": "tsc --build packages.tsconfig.json",
+    "watch": "tsc --build --watch packages.tsconfig.json"
   },
   "devDependencies": {
     "lerna": "^3.14.1"
