--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stackeat/diagnostics-framework",
+  "name": "@stackeat/diagnostics-demo",
   "version": "0.1.0",
   "description": "> TODO: description",
   "author": "Eduard Malakhov <eduard@stackeat.com>",
@@ -32,6 +32,8 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
+    "@stackeat/diagnostics-basic-bundle": "^0.1.0",
+    "@stackeat/diagnostics-framework": "^0.1.0",
     "inversify": "^5.0.1",
     "moment": "^2.24.0",
     "reflect-metadata": "^0.1.13"
