--- a/packages/bundle/core/package.json
+++ b/packages/bundle/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@stackeat/diagnostics-framework",
+  "name": "@stackeat/diagnostics",
   "version": "0.1.0",
   "description": "> TODO: description",
   "author": "Eduard Malakhov <eduard@stackeat.com>",
@@ -32,6 +32,7 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
+    "@stackeat/extensibility": "^0.1.2",
     "inversify": "^5.0.1",
     "moment": "^2.24.0",
     "reflect-metadata": "^0.1.13"
