--- a/packages/demo/tsconfig.json
+++ b/packages/demo/tsconfig.json
@@ -47,6 +47,7 @@
       "errors/*": ["errors/*"],
       "components/*": ["components/*"],
       "capabilities": ["capabilities"],
+      "decorators/*": ["decorators/*"],
       "bindings": ["bindings"],
       "container": ["container"]
     }                          /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
