--- a/packages/bundle/core/tsconfig.json
+++ b/packages/bundle/core/tsconfig.json
@@ -46,8 +46,11 @@
       "conventions/*": ["conventions/*"],
       "errors/*": ["errors/*"],
       "components/*": ["components/*"],
+      "decorators/*": ["decorators/*"],
       "capabilities": ["capabilities"],
-      "bindings": ["bindings"]
+      "bindings": ["bindings"],
+      "formatting": ["formatting"],
+      "common": ["common"]
     }                          /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     // "typeRoots": [],                       /* List of folders to include type definitions from. */
