--- a/packages/bundle/extensions/console/tsconfig.json
+++ b/packages/bundle/extensions/console/tsconfig.json
@@ -47,6 +47,7 @@
       "errors/*": ["errors/*"],
       "components/*": ["components/*"],
       "capabilities": ["capabilities"],
+      "decorators/*": ["decorators/*"],
       "bindings": ["bindings"]
     }     
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
