--- a/packages/bundle/core/package.json
+++ b/packages/bundle/core/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@stackeat/diagnostics",
+  "name": "@atweel/diagnostics",
   "version": "0.1.0",
   "description": "> TODO: description",
-  "author": "Eduard Malakhov <eduard@stackeat.com>",
-  "homepage": "https://github.com/stackeat/diagnostics#readme",
+  "author": "Eduard Malakhov <eduard@atweel.com>",
+  "homepage": "https://github.com/atweel/diagnostics#readme",
   "license": "ISC",
   "main": "lib/exports.js",
   "directories": {
@@ -18,14 +18,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/stackeat/diagnostics.git"
+    "url": "git+https://github.com/atweel/diagnostics.git"
   },
   "scripts": {
     "test": "ts-mocha --paths src/**/*.spec.ts",
     "clean": "rm -rf lib"
   },
   "bugs": {
-    "url": "https://github.com/stackeat/diagnostics/issues"
+    "url": "https://github.com/atweel/diagnostics/issues"
   },
   "devDependencies": {
     "@types/chai": "^4.2.0",
