--- a/packages/demo/package.json
+++ b/packages/demo/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@stackeat/diagnostics-demo",
+  "name": "@atweel/diagnostics-demo",
   "version": "0.1.0",
   "description": "> TODO: description",
-  "author": "Eduard Malakhov <eduard@stackeat.com>",
-  "homepage": "https://github.com/stackeat/diagnostics#readme",
+  "author": "Eduard Malakhov <eduard@atweel.com>",
+  "homepage": "https://github.com/atweel/diagnostics#readme",
   "license": "ISC",
   "main": "app/entrypoint.js",
   "directories": {
@@ -18,13 +18,13 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/stackeat/diagnostics.git"
+    "url": "git+https://github.com/atweel/diagnostics.git"
   },
   "scripts": {
     "clean": "rm -rf app"
   },
   "bugs": {
-    "url": "https://github.com/stackeat/diagnostics/issues"
+    "url": "https://github.com/atweel/diagnostics/issues"
   },
   "devDependencies": {
     "@types/chai": "^4.2.0",
@@ -37,8 +37,8 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
-    "@stackeat/diagnostics": "^0.1.0",
-    "@stackeat/diagnostics-console": "^0.1.0",
+    "@atweel/diagnostics": "^0.1.0",
+    "@atweel/diagnostics-console": "^0.1.0",
     "inversify": "^5.0.1",
     "moment": "^2.24.0",
     "reflect-metadata": "^0.1.13"
