--- a/packages/bundle/core/package.json
+++ b/packages/bundle/core/package.json
@@ -33,6 +33,7 @@
     "@zerollup/ts-transform-paths": "^1.7.3",
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
+    "ts-node": "^8.8.1",
     "ttypescript": "^1.5.7",
     "typemoq": "^2.1.0",
     "typescript": "^3.5.3"
