Rename demonstration -> showcase

--- a/showcase/package.json
+++ b/showcase/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@atweel/diagnostics-demo",
+  "name": "@atweel/diagnostics-showcase",
   "version": "0.1.0",
   "description": "> TODO: description",
   "author": "Eduard Malakhov <eduard@atweel.com>",
