--- a/solution.tsconfig.json
+++ b/solution.tsconfig.json
@@ -2,7 +2,7 @@
     "references": [
         { "path": "packages/bundle/core" },
         { "path": "packages/bundle/extensions/console" },
-        { "path": "demonstration" }
+        { "path": "showcase" }
     ],
     "exclude": [
         "*"
