Install husky and configure pre-commit integration

--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "debug:demo": "node-dev --respawn --inspect packages/demo",
     "lint": "eslint --ext .ts .",
     "lint:fix": "yarn lint --fix",
-    "test": "lerna run test"
+    "test": "lerna run test",
+    "integrate": "yarn lint && yarn build && yarn test"
   },
   "workspaces": [
     "packages/**/*"
@@ -20,6 +21,7 @@
     "@typescript-eslint/parser": "^2.25.0",
     "eslint": "^6.8.0",
     "eslint-plugin-react": "^7.19.0",
+    "husky": "^4.2.3",
     "lerna": "^3.14.1",
     "ttypescript": "^1.5.7",
     "typescript": "^3.5.3"
