--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "lint": "eslint --ext .ts .",
     "lint:fix": "yarn lint --fix",
     "test": "lerna run test",
-    "integrate": "yarn lint && yarn build && yarn test"
+    "integrate": "yarn clean && yarn lint && yarn build && yarn test"
   },
   "workspaces": [
     "packages/**/*"
