--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "eslint-plugin-react": "^7.19.0",
     "husky": "^4.2.3",
     "lerna": "^3.14.1",
+    "ts-node": "^8.8.1",
     "ttypescript": "^1.5.7",
     "typescript": "^3.5.3"
   }
