--- a/packages/extensions/console/package.json
+++ b/packages/extensions/console/package.json
@@ -32,6 +32,7 @@
     "@zerollup/ts-transform-paths": "^1.7.3",
     "chai": "^4.2.0",
     "mocha": "^6.2.0",
+    "ts-mocha": "^7.0.0",
     "ts-node": "^8.8.1",
     "ttypescript": "^1.5.7",
     "typemoq": "^2.1.0",
