--- a/showcase/package.json
+++ b/showcase/package.json
@@ -15,7 +15,7 @@
     "lib"
   ],
   "publishConfig": {
-    "access": "public"
+    "access": "private"
   },
   "repository": {
     "type": "git",
