--- a/.github/workflows/integrate-master-branch.yml
+++ b/.github/workflows/integrate-master-branch.yml
@@ -27,6 +27,5 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
-    - run: yarn global add lerna
-    - run: lerna bootstrap
+    - run: yarn install
     - run: yarn integrate
