--- a/.github/workflows/integrate-master-branch.yml
+++ b/.github/workflows/integrate-master-branch.yml
@@ -29,5 +29,5 @@ jobs:
         node-version: ${{ matrix.node-version }}
     - run: yarn install
       env:
-        NODE_AUTH_TOKEN: ${{ secrets.NPMJS_ORG_READER_TOKEN }}
+        NPM_AUTH_TOKEN: ${{ secrets.NPMJS_ORG_READER_TOKEN }}
     - run: yarn integrate
