--- a/.github/workflows/integrate-master-branch.yml
+++ b/.github/workflows/integrate-master-branch.yml
@@ -28,5 +28,7 @@ jobs:
       uses: actions/setup-node@v1
       with:
         node-version: ${{ matrix.node-version }}
+    - run: |
+        echo "//registry.npmjs.org/:_authToken=\${NPM_AUTH_TOKEN}" > .npmrc 
     - run: yarn install
     - run: yarn integrate
