Update dependencies, remove unused

--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "build": "ttsc --build --force packages.tsconfig.json",
+    "build": "ttsc --build packages.tsconfig.json",
     "watch": "ttsc --build --watch packages.tsconfig.json",
-    "clean": "lerna run clean",
+    "clean": "lerna run clean && find . \\( -name \\*.tsbuildinfo -o -name \\*.log ! -path ./node_modules/\\* \\) | xargs -I {} rm -rf {}",
     "rebuild": "yarn clean && yarn build",
-    "showcase": "ts-node showcase",
+    "showcase": "cd showcase && ts-node -r tsconfig-paths/register src/entrypoint.ts",
     "debug:showcase": "ts-node-dev --respawn --inspect -- showcase",
     "lint": "eslint --ext .ts .",
     "lint:fix": "yarn lint --fix",
