--- a/packages/extensions/console/package.json
+++ b/packages/extensions/console/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@atweel/diagnostics-console",
-  "version": "0.1.0",
+  "version": "1.0.0-beta.0",
   "description": "> TODO: description",
   "author": "Eduard Malakhov <eduard@atweel.com>",
   "homepage": "https://github.com/atweel/diagnostics#readme",
@@ -27,19 +27,17 @@
     "url": "https://github.com/atweel/diagnostics/issues"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.0",
-    "@types/mocha": "^5.2.7",
+    "@types/jest": "^25.1.4",
     "@zerollup/ts-transform-paths": "^1.7.3",
-    "chai": "^4.2.0",
-    "mocha": "^6.2.0",
-    "ts-mocha": "^7.0.0",
+    "jest": "^25.2.4",
+    "ts-jest": "^25.3.0",
     "ts-node": "^8.8.1",
     "ttypescript": "^1.5.7",
     "typemoq": "^2.1.0",
     "typescript": "^3.5.3"
   },
   "dependencies": {
-    "@atweel/diagnostics": "^0.1.0",
+    "@atweel/diagnostics": "^1.0.0-beta.0",
     "@stackeat/extensibility": "^0.1.19",
     "inversify": "^5.0.1",
     "moment": "^2.24.0",
