Specify explicit tsconfig includes

--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -15,6 +15,9 @@
       "common": ["common"]
     }                          
   },
+  "include": [
+    "src/**/*.ts"
+  ],
   "exclude": [
     "src/**/*.spec.ts"
   ]
