--- a/packages/extensions/console/tsconfig.json
+++ b/packages/extensions/console/tsconfig.json
@@ -16,6 +16,9 @@
   "references": [
     { "path": "../../core" }
   ],
+  "include": [
+    "src/**/*.ts"
+  ],
   "exclude": [
     "src/**/*.spec.ts"
   ]
