--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,6 +3,7 @@
 {
 	"name": "Node.js 12 & TypeScript",
 	"dockerFile": "Dockerfile",
+	"remoteUser": "developer",
 
 	// Set *default* container specific settings.json values on container create.
 	"settings": { 
