Configure root prepack script, remove per-package prepublish scripts

--- a/package.json
+++ b/package.json
@@ -12,8 +12,7 @@
     "lint:fix": "yarn lint --fix",
     "test": "lerna exec jest -- \\$PWD --config \\$LERNA_ROOT_PATH/jest.config.js --passWithNoTests",
     "integrate": "yarn clean && yarn lint && yarn build && yarn test",
-    "prepublish": "false",
-    "prepack": "false"
+    "prepack": "yarn lint && yarn rebuild && yarn test"
   },
   "workspaces": [
     "packages/**/*"
