--- a/package.json
+++ b/package.json
@@ -29,5 +29,6 @@
     "ts-node-dev": "^1.0.0-pre.44",
     "ttypescript": "^1.5.7",
     "typescript": "^3.5.3"
-  }
+  },
+  "version": "0.0.1-alpha.0"
 }
