--- a/.github/workflows/master_integration.yml
+++ b/.github/workflows/master_integration.yml
@@ -22,23 +22,15 @@ jobs:
         with:
           token: ${{ secrets.ROBBY_ATWEELS_GITHUB_TOKEN }}
 
-      - name: Configure git user name & email
-        run: |
-          git config --global user.email "robby@atweel.com" && \
-          git config --global user.name "Robby Atweel"
-
-      - name: Increment prerelease version if no version tag assigned
-        if: github.event_name == 'push'
-        run: |
-          git fetch --tags --quiet
-          if [[ $(git tag --points-at HEAD) !=  "v"* ]]; 
-            then yarn lerna version --prerelease --preid alpha --no-commit-hooks 
-          fi
-
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
           node-version: 12.x
+
+      - name: Configure git user name & email
+        run: |
+          git config --global user.email "robby@atweel.com" && \
+          git config --global user.name "Robby Atweel"
 
       - name: Resolve yarn cache directory path
         id: yarn-cache-dir-path
@@ -50,6 +42,19 @@ jobs:
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
+
+      - name: Install dependencies & bootstrap packages
+        run: |
+          yarn install -W --frozen-lockfile && \
+          yarn lerna bootstrap -- --frozen-lockfile
+
+      - name: Increment prerelease version if no version tag assigned
+        if: github.event_name == 'push'
+        run: |
+          git fetch --tags --quiet
+          if [[ $(git tag --points-at HEAD) !=  "v"* ]]; 
+            then yarn lerna version --prerelease --preid alpha --no-commit-hooks 
+          fi
 
       - name: Integrate package
         run: |
