--- a/.github/workflows/release_integration.yml
+++ b/.github/workflows/release_integration.yml
@@ -20,15 +20,13 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-        with:
-          token: ${{ secrets.ROBBY_ATWEELS_GITHUB_TOKEN }}
 
-      - name: Configure git user name & email
+      - name: Configure git
         run: |
           git config --global user.email "robby@atweel.com" && \
           git config --global user.name "Robby Atweel"
 
-      - name: Configure NPM access token
+      - name: Configure npm
         run: echo "//registry.npmjs.org/:_authToken=\${NPM_PUBLISHER_AUTH_TOKEN}" > .npmrc
 
       - name: Use Node.js
@@ -40,16 +38,18 @@ jobs:
         id: yarn-cache-dir-path
         run: echo "::set-output name=dir::$(yarn cache dir)"
 
-      - uses: actions/cache@v1
+      - name: Configure yarn cache
+        uses: actions/cache@v1
         with:
           path: ${{ steps.yarn-cache-dir-path.outputs.dir }}
           key: ${{ runner.os }}-yarn-${{ hashFiles('**/yarn.lock') }}
           restore-keys: |
             ${{ runner.os }}-yarn-
 
-      - name: Bootstrap packages
+      - name: Install dependencies & bootstrap packages
         run: |
-          lerna bootstrap -- --frozen-lockfile
+          yarn install -W --frozen-lockfile && \
+          yarn lerna bootstrap -- -- --frozen-lockfile
 
       - name: Publish packages
         run: yarn lerna publish --prerelease --preid beta --dist-tag beta
