Adjust release workflow (2)

--- a/.github/workflows/release_integration.yml
+++ b/.github/workflows/release_integration.yml
@@ -52,4 +52,4 @@ jobs:
           yarn lerna bootstrap -- -- --frozen-lockfile
 
       - name: Publish packages
-        run: yarn lerna publish --prerelease --preid beta --dist-tag beta
+        run: yarn lerna publish prerelease --preid beta --dist-tag beta
