--- a/packages/extensions/console/package.json
+++ b/packages/extensions/console/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@atweel/diagnostics-console",
   "version": "1.0.0-alpha.2",
-  "description": "> TODO: description",
+  "description": "Extension packagee for console-based diagnostics by Atweel Inc.",
   "author": "Eduard Malakhov <eduard@atweel.com>",
   "homepage": "https://github.com/atweel/diagnostics#readme",
   "license": "ISC",
