--- a/package.json
+++ b/package.json
@@ -2,11 +2,15 @@
   "name": "root",
   "private": true,
   "scripts": {
-    "build": "ttsc --build packages.tsconfig.json",
+    "build": "yarn build:packages && yarn build:showcase",
+    "build:packages": "ttsc --build packages.tsconfig.json",
+    "build:showcase": "ttsc --build showcase/tsconfig.json",
     "watch": "ttsc --build --watch packages.tsconfig.json",
-    "clean": "lerna run clean && find . \\( -name \\*.tsbuildinfo -o -name \\*.log ! -path ./node_modules/\\* \\) | xargs -I {} rm -rf {}",
+    "clean": "yarn clean:internals && yarn clean:common",
+    "clean:internals": "lerna run clean --parallel",
+    "clean:common": "find . \\( -name \\*.tsbuildinfo -o -name \\*.log ! -path ./node_modules/\\* \\) | xargs -I {} rm -rf {}",
     "rebuild": "yarn clean && yarn build",
-    "showcase": "cd showcase && ts-node -r tsconfig-paths/register src/entrypoint.ts",
+    "showcase": "cd showcase && yarn ts-node -r tsconfig-paths/register src/entrypoint.ts",
     "debug:showcase": "ts-node-dev --respawn --inspect -- showcase",
     "lint": "eslint --ext .ts .",
     "lint:fix": "yarn lint --fix",
@@ -15,7 +19,8 @@
     "prepack": "yarn lint && yarn rebuild && yarn test"
   },
   "workspaces": [
-    "packages/**/*"
+    "packages/**/*",
+    "showcase"
   ],
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^2.25.0",
@@ -29,6 +34,5 @@
     "ts-node-dev": "^1.0.0-pre.44",
     "ttypescript": "^1.5.7",
     "typescript": "^3.5.3"
-  },
-  "version": "1.0.0-alpha.0"
+  }
 }
