--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -37,6 +37,7 @@
     "typescript": "^3.5.3"
   },
   "dependencies": {
+    "@atweel/primitives": "^1.0.0-beta.4",
     "@stackeat/extensibility": "^0.1.19",
     "inversify": "^5.0.1",
     "moment": "^2.24.0",
