--- a/packages/core/tsconfig.json
+++ b/packages/core/tsconfig.json
@@ -5,10 +5,10 @@
     "rootDir": "./src",                      
     "baseUrl": "./src",                      
     "paths": {
-      "conventions/*": ["conventions/*"],
+      "conventions/*": ["internals/conventions/*"],
       "errors/*": ["errors/*"],
-      "components/*": ["components/*"],
-      "decorators/*": ["decorators/*"],
+      "components/*": ["internals/components/*"],
+      "decorators/*": ["internals/decorators/*"],
       "capabilities": ["capabilities"],
       "bindings": ["bindings"],
       "formatting": ["formatting"],
