--- a/.huskyrc
+++ b/.huskyrc
@@ -1,6 +1,5 @@
 {
     hooks: {
-        "pre-commit": "yarn integrate",
-        "pre-merge": "git config merge.ours.driver true"
+        "pre-commit": "yarn integrate"
     }
 }
