--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@atweel/diagnostics",
-  "version": "1.1.0-alpha.0",
+  "version": "1.1.0-beta.0",
   "description": "Diagnostics package by Atweel Inc.",
   "author": "Eduard Malakhov <eduard@atweel.com>",
   "homepage": "https://github.com/atweel/diagnostics#readme",
