chore: refactor jest configuration with projects

--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "debug:showcase": "ts-node-dev --respawn --inspect -- showcase",
     "lint": "eslint --ext .ts .",
     "lint:fix": "yarn lint --fix",
-    "test": "lerna exec jest -- \\$PWD --config \\$LERNA_ROOT_PATH/jest.config.js --passWithNoTests",
+    "test": "jest --passWithNoTests",
     "integrate": "yarn clean && yarn lint && yarn build && yarn test",
     "prepack": "yarn lint && yarn rebuild && yarn test"
   },
